src/cache/memdictor/ds/sorted_set/out
test.cc: In function ‘bool test_skip_list()’:
test.cc:75:23: error: ‘test_iterator’ was not declared in this scope
     test_iterator(list);
                       ^
test.cc:76:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
